--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# JPA/Hibernate Configuration  
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,3 +17,8 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
