--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration  
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -22,3 +23,7 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
+
+# Upload Directory Path
+upload.dir=uploads/
+upload.products.dir=uploads/products/
