--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
 
-# Upload Directory Path
-upload.dir=uploads/
-upload.products.dir=uploads/products/
+# Upload Directory Configuration
+app.upload.dir=uploads
+app.upload.max-file-size=10485760
+app.upload.allowed-image-types=image/jpeg,image/jpg,image/png,image/gif,image/webp
