chore: ignore service account credentials

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ uploads/stores/
 uploads/users/
 uploads/drivers/
 uploads/reviews/
+
+# Google / Firebase service account
+src/main/resources/serviceAccountKey.json
+**/serviceAccountKey.json
+**/*serviceAccount*.json
