--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,11 @@ dependencies {
 
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
 
+	// Gemini + tooling
+	implementation 'com.google.genai:google-genai:1.32.0'
+	implementation 'io.github.cdimascio:dotenv-java:3.2.0'
+	implementation 'com.google.code.gson:gson:2.11.0'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
